test/zinc_source/compile_errors/collections/05_mutator_return_value.zn
// expected-error: mutating collection methods

fn main() {
    a = set()
    b = a.insert(1)
}
